--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@
   align-items: flex-end;
   height: 300px;
   position: relative;
+  margin-bottom: 70px;
 }
 
 .bar {
@@ -185,22 +186,18 @@
 
 .bar-1 {
   height: 80px;
-  animation: barAnimation 3s ease;
 }
 
 .bar-2 {
   height: 150px;
-  animation: barAnimation 3s ease;
 }
 
 .bar-3 {
   height: 220px;
-  animation: barAnimation 3s ease;
 }
 
 .bar-4 {
   height: 280px;
-  animation: barAnimation 3s ease;
 }
 
 .bar4{
@@ -221,3 +218,8 @@
     height: 100%vh;
   }
 }
+
+.barAnimation {
+  animation: barAnimation 3s ease;
+}
+
