--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@
     height: 0;
   }
   100% {
-    height: 100%vh;
+    height: 100;
   }
 }
 
@@ -223,3 +223,35 @@
   animation: barAnimation 3s ease;
 }
 
+/* Objetivos */
+
+.objetivos{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+  height: 80vh;
+  background-color: var(--offwhite);
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0px 70px;
+  padding-bottom:30px;
+  border-radius: 20px;
+  background-color: var(--laranjamedio);
+  color: var(--verdeescuro);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  transition: all 0.3s ease;
+}
+
+.container-objetivos{
+  display: flex;
+}
+.container>img{
+  height: 150px;
+  margin: 20px;
+}
