--- a/style.css
+++ b/style.css
@@ -241,17 +241,30 @@
   justify-content: center;
   margin: 0px 70px;
   padding-bottom:30px;
-  border-radius: 20px;
   background-color: var(--laranjamedio);
   color: var(--verdeescuro);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  transition: all 0.3s ease;
+  transition: all 0.4s ease;
 }
 
 .container-objetivos{
   display: flex;
 }
 .container>img{
-  height: 150px;
+  width: 150px;
   margin: 20px;
 }
+
+.container:hover{
+  transform: scale(1.1);
+  z-index: 1;
+}
+
+.container-objetivos:hover ~ .container{
+  opacity: 0.5;
+  filter: blur(2px);
+}
+
+
+
+
