--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 @import url('colors.css');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
+html{
+  scroll-behavior: smooth;
+}
 
 * {
     margin: 0;
@@ -75,7 +77,7 @@
     padding: 70px 0px 70px;
   }
   .containerheader>nav>ul{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin-right: 50px;
   }
   .containerheader>nav>ul>a:hover{
@@ -109,7 +111,7 @@
   .button-CTA{
     color: var(--verdeescuro);
     padding: 10px 20px;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 400;
     margin-top: 20px;
     border: 1px solid var(--verdeescuro);
@@ -181,7 +183,6 @@
   background-color: var(--laranjaescuro);
   position: relative;
   margin: 0 20px;
-  border-radius: 5px;
 }
 
 .bar-1 {
@@ -239,32 +240,97 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0px 70px;
-  padding-bottom:30px;
+  padding:0px 30px 30px;
   background-color: var(--laranjamedio);
   color: var(--verdeescuro);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  transition: all 0.4s ease;
+  transition: all 0.2s ease;
+  transition: width 0.5s ease-in-out, height 1s ease-in-out;
+  margin: 0px 70px;
+  width: 10%;
+  position: relative;
+  overflow: hidden;
+
 }
 
 .container-objetivos{
   display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
 }
+
 .container>img{
   width: 150px;
   margin: 20px;
 }
 
+.container-objetivos .container:hover ~ .container,
+.container-objetivos .container:hover + .container,
+.container-objetivos .container:has(~ .container:hover),
+.container-objetivos .container:has(+ .container:hover) {
+  filter: blur(3px);
+  opacity: 0.7;
+  transform: scale(0.95);
+}
+
+
+.txtmissao{
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: opacity 0.4s ease 0.6s, visibility 0s 0.6s;
+  font-size: 1.2rem;
+}
+
+.txtvalores{
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: opacity 0.4s ease 0.6s, visibility 0s 0.6s;
+  font-size: 1.2rem;
+}
+
+.txtvisao{
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: opacity 0.4s ease 0.6s, visibility 0s 0.6s;
+  font-size: 1.2rem;
+}
+
 .container:hover{
-  transform: scale(1.1);
-  z-index: 1;
+ width: 90%;
+ height: 50%;
 }
 
-.container-objetivos:hover ~ .container{
-  opacity: 0.5;
-  filter: blur(2px);
+.visao:hover{
+  width: 90%;
+  height: 60%;
+ }
+
+.visao:hover .txtvisao{
+  visibility: visible;
+  opacity: 1;
+  height: auto;
 }
 
+.missao:hover .txtmissao{
+  visibility: visible;
+  opacity: 1;
+  height: auto;
+}
 
+.valores:hover .txtvalores{
+  visibility: visible;
+  opacity: 1;
+  height: auto;
+}
 
 
